# s3-bucket-perma-link

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md
.github/workflows/: action-lint.yaml  auto-merge-release-please.yml  build.yaml  release-please.yaml  renovate-auto-approve.yml  renovate-config.yaml  security.yml  sentry.yaml
src/: config.rs  error.rs  main.rs  server.rs
src/data/: bucket.rs
src/routes/: download.rs
