[package]
name = "s3_bucket_perma_link"
version = "0.2.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "s3_bucket_perma_link"

[dependencies]
getset = "0.1.2"
derive-new = "0.7.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "net", "signal", "time", "io-util"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = { version = "1.0.86", features = ["backtrace"] }
thiserror = "1.0.63"
backtrace = "0.3.73"
actix-web = { version = "4.9.0", default-features = false, features = ["macros", "compress-brotli", "compress-gzip", "cookies"] } # Guessed features, but safer to stick to default if unsure. Reverting to default for actix-web to avoid breakage unless specified.
tracing-actix-web = "0.7.12"
config = "0.15.0"
serde = "1.0.209"
serde_json = "1.0.128"
rust-s3 = { version = "0.33", default-features = false, features = ["tokio-rustls-tls"] }
sentry = { version = "0.46.0", default-features = false, features = ["anyhow", "debug-images", "backtrace", "contexts", "panic", "rustls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
time = "0.3.36"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[profile.release]
lto = true
codegen-units = 1
debug = true